--- a/css/estilo.css
+++ b/css/estilo.css
@@ -634,7 +634,7 @@ button:disabled {
   }
 }
 
-/* footer  */
+
 /* Estilo general del footer */
 .footer {
   background-color: #1c1c1c;
@@ -679,3 +679,97 @@ button:disabled {
   }
 }
 
+/* responsive */
+/* Estilos generales */
+body {
+  font-family: 'Poppins', sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+.nav-links {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.nav-links li {
+  display: inline;
+  margin-right: 20px;
+}
+
+.nav-links a {
+  text-decoration: none;
+  color: #333;
+  font-size: 16px;
+  padding: 10px;
+}
+
+/* Estilos para el menú en pantallas grandes */
+@media (min-width: 768px) {
+  .nav-links {
+    display: flex;
+    justify-content: flex-end;
+  }
+
+  .nav-links li {
+    display: inline-block;
+  }
+
+  .logo-container {
+    display: inline-block;
+  }
+}
+
+/* Estilos para el menú en pantallas pequeñas */
+@media (max-width: 767px) {
+  .nav-links {
+    display: none; /* Ocultar el menú por defecto */
+    flex-direction: column;
+    width: 100%;
+    text-align: center;
+    position: absolute;
+    top: 60px; /* Ajusta según la altura de tu header */
+    left: 0;
+    background-color: #fff;
+    padding: 10px 0;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  }
+
+  .nav-links.active {
+    display: flex; /* Mostrar el menú cuando está activo */
+  }
+
+  .nav-links li {
+    margin: 15px 0;
+  }
+
+  .hamburger {
+    display: block;
+    cursor: pointer;
+  }
+
+  .hamburger div {
+    width: 25px;
+    height: 3px;
+    margin: 5px;
+    background-color: #333;
+    transition: all 0.3s;
+  }
+
+  .hamburger.active div:nth-child(1) {
+    transform: rotate(45deg);
+    position: relative;
+    top: 8px;
+  }
+
+  .hamburger.active div:nth-child(2) {
+    opacity: 0;
+  }
+
+  .hamburger.active div:nth-child(3) {
+    transform: rotate(-45deg);
+    position: relative;
+    top: -8px;
+  }
+}
