--- a/css/estilo.css
+++ b/css/estilo.css
@@ -670,4 +670,84 @@ button:disabled {
 
 
 
+/* responsive */
+/* Estilos generales (para computadoras de escritorio) */
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #131212;
+}
+
+.container {
+  width: 90%;
+  margin: 0 auto;
+  max-width: 1200px;
+}
+
+header {
+  background-color: #333;
+  color: white;
+  padding: 20px;
+  text-align: center;
+}
+
+section {
+  padding: 40px 0;
+}
+
+h1 {
+  font-size: 3rem;
+  margin-bottom: 20px;
+}
+
+p {
+  font-size: 1.2rem;
+}
+
+/* Media Query para Tablets y dispositivos de 768px o menos */
+@media (max-width: 768px) {
+  h1 {
+      font-size: 2.5rem;
+  }
+
+  p {
+      font-size: 1rem;
+  }
+
+  .container {
+      width: 85%;
+  }
+
+  header {
+      padding: 15px;
+  }
+
+  section {
+      padding: 30px 0;
+  }
+}
+
+/* Media Query para Smartphones y dispositivos de 480px o menos */
+@media (max-width: 480px) {
+  h1 {
+      font-size: 2rem;
+  }
+
+  p {
+      font-size: 0.9rem;
+  }
+
+  header {
+      padding: 10px;
+  }
+
+  section {
+      padding: 20px 0;
+  }
+
+  .container {
+      width: 95%;
+  }
+}
 
