--- a/css/estilo.css
+++ b/css/estilo.css
@@ -249,6 +249,22 @@ a {
   transform: scale(1.05);
 }
 
+/* descargar cv */
+.btn {
+  background-color: #25d366; /* Color de fondo */
+  color: white; /* Color del texto */
+  padding: 12px 20px; /* Espaciado interno */
+  border-radius: 5px; /* Bordes redondeados */
+  font-size: 16px; /* Tamaño de la fuente */
+  text-decoration: none; /* Eliminar subrayado del enlace */
+  display: inline-block;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  transition: background-color 0.3s ease;
+}
+.btn:hover {
+  background-color: #128c7e; /* Cambio de color al pasar el mouse */
+}
+
 /* Redes Sociales */
 .social-icons {
   margin-top: 20px;
